feat(completions): 更新 psc

--- a/completions/psc/language/en-US.json
+++ b/completions/psc/language/en-US.json
@@ -1738,13 +1738,7 @@
       "rm": {
         "tip": "Remove one or more aliases for {{ $completion }}.",
         "tip_v": [
-          "{{",
-          "$alias_list = $PSCompletions.data.alias.$completion;",
-          "if($alias_list.Count -eq 1){",
-          "\"The alias cannot be removed because it's the only alias of $($completion).`nIf you want to change it, you should first add a new alias for $($completion) and then remove the old alias.\"",
-          "}",
-          "else{ 'Remove this alias.' };",
-          "}}"
+          "Remove this alias."
         ],
         "example": [
           "E: psc alias rm git g gi            --- Remove aliases (g,gi) for git\n",
