--- a/completions/psc/language/zh-CN.json
+++ b/completions/psc/language/zh-CN.json
@@ -1747,13 +1747,7 @@
       "rm": {
         "tip": "为 {{ $completion }} 移除一个或多个别名",
         "tip_v": [
-          "{{",
-          "$alias_list = $PSCompletions.data.alias.$completion;",
-          "if($alias_list.Count -eq 1){",
-          "\"此别名无法移除, 因为它是补全 $($completion) 唯一的别名`n如果你希望修改它, 你应该先为补全 $($completion) 添加一个新的别名, 再移除这个旧别名\"",
-          "}",
-          "else{ '移除此别名' };",
-          "}}"
+          "移除此别名。"
         ],
         "example": [
           "E: psc alias rm git g gi            --- 为 git 删除 g、gi 两个别名\n",
