feat(completions): 更新 psc

--- a/completions/psc/language/en-US.json
+++ b/completions/psc/language/en-US.json
@@ -1527,6 +1527,7 @@
       "restart": "<@Yellow>The change takes effect after restarting PowerShell and reimporting PSCompletions module."
     },
     "current_value": "Current Value",
+    "set_value": "Set to {{ $value }}.",
     "update_info": [
       "<@Cyan>PSCompletions remote repository update:\n",
       "{{",
@@ -1569,7 +1570,6 @@
     "no_completion": "<@Red>You haven't added <@Magenta>{{ $completion }}<@Red> yet.",
     "confirm_cancel": "<@Green>The operation has been canceled.",
     "less_tip": "<@Cyan>Press <@Magenta>Enter<@Cyan> key to view more, or any <@Magenta>other key<@Cyan> to exit! (<@Magenta>{{ $lines }}<@Cyan> lines remaining)",
-    "comp_hide": "⚠️Due to the limited display area size, some completions have been hidden⚠️\nYou can filter by entering the prefix of the completion and pressing Tab",
     "min_area": "The area is too small!",
     "example_color": "<@Cyan>",
     "list": {
@@ -1833,7 +1833,6 @@
         "Set special configuration for {{ $completion }}.\n",
         "Special configurations have higher priority than global configurations."
       ],
-      "tip_v": "Set to {{ $value }}",
       "example": [
         "E: psc completion psc enable_tip       --- If it has a value, return the value\n",
         "   psc completion psc enable_tip 0     --- Set psc completion to not display tip\n",
@@ -1871,9 +1870,7 @@
           "if($v -notin @('',$null)){ \"Current Value: $($v)`n\" }",
           "}}",
           "Set whether to display completion tip for {{ $completion }}."
-        ],
-        "tip_v1": "Set {{ $completion }}'s enable_tip to 1.",
-        "tip_v0": "Set {{ $completion }}'s enable_tip to 0."
+        ]
       },
       "enable_hooks": {
         "tip": [
