--- a/completions/psc/language/zh-CN.json
+++ b/completions/psc/language/zh-CN.json
@@ -299,8 +299,8 @@
     {
       "name": "completion",
       "tip": [
-        "指定单个补全的独立配置(独立配置优先级最高)。\n",
-        "每个补全默认带有两个可设置的独立配置(language|enable_tip)。\n",
+        "指定单个补全的特殊配置(特殊配置优先级最高)。\n",
+        "每个补全默认带有两个可设置的特殊配置(language|enable_tip)。\n",
         "{{ $info.completion.example }}"
       ],
       "next": []
@@ -1536,6 +1536,7 @@
       "restart": "<@Yellow>请重启 PowerShell 并重新导入 PSCompletions 模块来使更改生效"
     },
     "current_value": "当前值",
+    "set_value": "设置为 {{ $value }}。",
     "update_info": [
       "<@Cyan>PSCompletions 远程仓库更新: \n",
       "{{",
@@ -1578,7 +1579,6 @@
     "no_completion": "<@Red>你还未添加 <@Magenta>{{ $completion }}<@Red> 补全",
     "confirm_cancel": "<@Green>操作取消!",
     "less_tip": "<@Cyan>按下 <@Magenta>Enter<@Cyan> 键查看更多, 按下 <@Magenta>其他任意键<@Cyan> 退出! (剩余 <@Magenta>{{ $lines }} <@Cyan>行)",
-    "comp_hide": "⚠️由于显示区域限制, 一些补全被隐藏⚠️\n你可以通过键入补全的前缀并按 Tab 键进行过滤",
     "min_area": "显示区域宽度或高度太小!",
     "example_color": "<@Cyan>",
     "list": {
@@ -1839,24 +1839,23 @@
     },
     "completion": {
       "tip": [
-        "设置 {{ $completion }} 的独立配置\n",
-        "独立配置的优先级高于全局配置"
+        "设置 {{ $completion }} 的特殊配置\n",
+        "特殊配置的优先级高于全局配置"
       ],
-      "tip_v": "设置为 {{ $value }}",
       "example": [
         "E: psc completion psc enable_tip       --- 返回配置当前的值(如果有值)\n",
         "   psc completion psc enable_tip 0     --- 单独设置 psc 不显示补全提示信息\n",
         "   psc completion psc language en-US   --- 单独设置 psc 补全的语言为英文"
       ],
       "done": [
-        "<@Magenta>{{ $completion }}<@Green> 的独立配置修改成功!\n",
+        "<@Magenta>{{ $completion }}<@Green> 的特殊配置修改成功!\n",
         "<@Blue>{{ $config_item }}<@Green>: <@Magenta>{{ $old_value }}<@Green> => <@Magenta>{{ $new_value }}"
       ],
       "err": {
         "min": [
           "<@Yellow>",
           "你应该继续输入要设置的配置项\n",
-          "每个补全默认带有两个可设置的独立配置(<@Magenta>language<@Yellow>|<@Magenta>enable_tip<@Yellow>)\n",
+          "每个补全默认带有两个可设置的特殊配置(<@Magenta>language<@Yellow>|<@Magenta>enable_tip<@Yellow>)\n",
           "{{",
           "$config = $PSCompletions.config.comp_config.$($arg[1]).Keys | Where-Object { $_ -notin @('language','enable_tip') };",
           "if($config){ \"$($arg[1]) 额外的可用配置项: <@Magenta>$($config -join ' ')\" }",
@@ -1871,7 +1870,7 @@
           "}}",
           "设置 {{ $completion }} 的语言"
         ],
-        "tip_v": "设置语言为 {{ $language }}"
+        "tip_v": "设置语言为 {{ $language }}。"
       },
       "enable_tip": {
         "tip": [
@@ -1880,9 +1879,7 @@
           "if($v -notin @('',$null)){ \"当前值: $($v)`n\" }",
           "}}",
           "设置 {{ $completion }} 是否显示补全提示信息"
-        ],
-        "tip_v1": "将 {{ $completion }} 的 enable_tip 配置设置为 1",
-        "tip_v0": "将 {{ $completion }} 的 enable_tip 配置设置为 0"
+        ]
       },
       "enable_hooks": {
         "tip": [
