feat(completions): 更新 psc

--- a/completions/psc/language/en-US.json
+++ b/completions/psc/language/en-US.json
@@ -1539,8 +1539,8 @@
       "if($rm){ \"Delete: <@Magenta>$($rm)<@Cyan>`n`n\" };",
       "if($PSCompletions.update){ \"Update: <@Magenta>$($PSCompletions.update)<@Cyan>`nUse <@Magenta>psc update *<@Cyan> to update.`n`n\" };",
       "}}",
-      "If you don't want to see it, you can hide it by running <@Blue>psc config enable_completions_update 0<@Cyan>\n",
-      "But I don't recommend it, it's a good tip."
+      "You can hide this update tip by running <@Blue>psc config enable_completions_update 0<@Cyan>\n",
+      "But it's not recommended to hide it, it's a kind tip."
     ],
     "update_has": [
       "<@Cyan>--------------------\n",
