--- a/completions/psc/language/zh-CN.json
+++ b/completions/psc/language/zh-CN.json
@@ -1548,8 +1548,8 @@
       "if($rm){ \"删除补全: <@Magenta>$($rm)<@Cyan>`n`n\" };",
       "if($PSCompletions.update){ \"更新补全: <@Magenta>$($PSCompletions.update)<@Cyan>`n使用 <@Magenta>psc update *<@Cyan> 进行更新`n`n\" };",
       "}}",
-      "如果不想看到它, 请输入 <@Blue>psc config enable_completions_update 0<@Cyan> 禁止显示远程仓库状态。\n",
-      "但是我不建议你这样做, 它是一个很恰当的提示"
+      "你可以运行命令 <@Blue>psc config enable_completions_update 0<@Cyan> 隐藏这个远程仓库状态提示。\n",
+      "但是不建议你这样做, 它是一个很恰当的提示"
     ],
     "update_has": [
       "<@Cyan>--------------------\n",
