completions: 更新 psc 和 git

--- a/completions/psc/language/en-US.json
+++ b/completions/psc/language/en-US.json
@@ -319,7 +319,7 @@
           "tip": [
             "Set some special symbols(»?!) in the completion tip.\n",
             "They only exist in completions added via `psc add`.\n",
-            "For detail: https://pscompletions.pages.dev/command/#menu-symbol"
+            "For detail: https://pscompletions.abgox.com/command/#menu-symbol"
           ],
           "next": [
             {
@@ -339,9 +339,9 @@
                   "name": "\"\"",
                   "tip": [
                     "Set to \"\"\n",
-                    "It can hide symbols, but it is not recommended that you hide symbols.\n",
+                    "It can hide symbols, but it's not recommended.\n",
                     "It's more recommended that you modify them to your liking.\n",
-                    "Because these symbols let you know if you can continue to use Tab for completion."
+                    "Because these symbols let you know if you can continue to get completions."
                   ]
                 }
               ]
@@ -363,9 +363,9 @@
                   "name": "\"\"",
                   "tip": [
                     "Set to \"\"\n",
-                    "It can hide symbols, but it is not recommended that you hide symbols.\n",
+                    "It can hide symbols, but it's not recommended.\n",
                     "It's more recommended that you modify them to your liking.\n",
-                    "Because these symbols let you know if you can continue to use Tab for completion."
+                    "Because these symbols let you know if you can continue to get completions."
                   ]
                 }
               ]
@@ -387,9 +387,9 @@
                   "name": "\"\"",
                   "tip": [
                     "Set to \"\"\n",
-                    "It can hide symbols, but it is not recommended that you hide symbols.\n",
+                    "It can hide symbols, but it's not recommended.\n",
                     "It's more recommended that you modify them to your liking.\n",
-                    "Because these symbols let you know if you can continue to use Tab for completion."
+                    "Because these symbols let you know if you can continue to get completions."
                   ]
                 }
               ]
@@ -1468,7 +1468,7 @@
       " <@Magenta>$PSCompletions<@Cyan> => A variable name. Save all data related to the module. (<@Yellow>You can't modify it.<@Cyan>)\n",
       "\n",
       "For more information, please visit the project:\n",
-      "  Website : <@Blue>https://pscompletions.pages.dev<@Cyan>\n",
+      "  Website : <@Blue>https://pscompletions.abgox.com<@Cyan>\n",
       "  Github  : <@Blue>https://github.com/abgox/PSCompletions<@Cyan>\n",
       "  Gitee   : <@Blue>https://gitee.com/abgox/PSCompletions<@Cyan>\n",
       "When you have a problem using it, you can submit an issue. https://github.com/abgox/PSCompletions/issues\n",
