--- a/completions/psc/language/zh-CN.json
+++ b/completions/psc/language/zh-CN.json
@@ -317,14 +317,14 @@
           "tip": [
             "设置补全提示中的特殊符号(»?!)。\n",
             "这些符号只在通过 psc add 添加的补全中存在。\n",
-            "详情: https://pscompletions.pages.dev/command/#menu-symbol"
+            "详情: https://pscompletions.abgox.com/command/#menu-symbol"
           ],
           "next": [
             {
               "name": "SpaceTab",
               "tip": [
                 "当前值: {{ $PSCompletions.config.SpaceTab }}\n",
-                "使用 psc menu symbol SpaceTab \"\" 可以隐藏这个符号。 "
+                "使用 psc menu symbol SpaceTab \"\" 可以隐藏这个符号。"
               ],
               "next": [
                 {
@@ -337,8 +337,8 @@
                   "name": "\"\"",
                   "tip": [
                     "设置为 \"\"\n",
-                    "这可以起到隐藏符号的效果, 但是不建议你隐藏符号, 更建议修改为你喜欢的符号。\n",
-                    "因为符号的出现是为了让你能够直观感知到是否可以继续使用 Tab 进行补全。"
+                    "这可以隐藏符号, 但是不建议这样做, 更建议修改为你喜欢的符号。\n",
+                    "因为符号是为了让你能够直观感知到是否可以继续获取补全。"
                   ]
                 }
               ]
@@ -347,7 +347,7 @@
               "name": "WriteSpaceTab",
               "tip": [
                 "当前值: {{ $PSCompletions.config.WriteSpaceTab }}\n",
-                "使用 psc menu symbol WriteSpaceTab \"\" 可以隐藏这个符号。 "
+                "使用 psc menu symbol WriteSpaceTab \"\" 可以隐藏这个符号。"
               ],
               "next": [
                 {
@@ -360,8 +360,8 @@
                   "name": "\"\"",
                   "tip": [
                     "设置为 \"\"\n",
-                    "这可以起到隐藏符号的效果, 但是不建议你隐藏符号, 更建议修改为你喜欢的符号。\n",
-                    "因为符号的出现就是为了让你能够直观感知到是否可以继续使用 Tab 进行补全。"
+                    "这可以隐藏符号, 但是不建议这样做, 更建议修改为你喜欢的符号。\n",
+                    "因为符号是为了让你能够直观感知到是否可以继续获取补全。"
                   ]
                 }
               ]
@@ -370,7 +370,7 @@
               "name": "OptionTab",
               "tip": [
                 "当前值: {{ $PSCompletions.config.OptionTab }}\n",
-                "使用 psc menu symbol OptionTab \"\" 可以隐藏这个符号。 "
+                "使用 psc menu symbol OptionTab \"\" 可以隐藏这个符号。"
               ],
               "next": [
                 {
@@ -383,8 +383,8 @@
                   "name": "\"\"",
                   "tip": [
                     "设置为 \"\"\n",
-                    "这可以起到隐藏符号的效果, 但是不建议你隐藏符号, 更建议修改为你喜欢的符号。\n",
-                    "因为符号的出现就是为了让你能够直观感知到是否可以继续使用 Tab 进行补全。"
+                    "这可以隐藏符号, 但是不建议这样做, 更建议修改为你喜欢的符号。\n",
+                    "因为符号是为了让你能够直观感知到是否可以继续获取补全。"
                   ]
                 }
               ]
@@ -1478,11 +1478,11 @@
       " <@Magenta>$PSCompletions<@Cyan> => 变量名, 存储模块相关的所有数据(<@Yellow>你不能修改它<@Cyan>)\n",
       "\n",
       "更多相关信息, 请访问:\n",
-      "  Website : <@Blue>https://pscompletions.pages.dev<@Cyan>\n",
+      "  Website : <@Blue>https://pscompletions.abgox.com<@Cyan>\n",
       "  Github  : <@Blue>https://github.com/abgox/PSCompletions<@Cyan>\n",
       "  Gitee   : <@Blue>https://gitee.com/abgox/PSCompletions<@Cyan>\n",
       "如果有使用问题, 请提交 issue: https://github.com/abgox/PSCompletions/issues\n",
-      "如果 <@Blue>PSCompletions<@Cyan> 对你有所帮助, 请给这个项目点个 <@Yellow>Star<@>\n"
+      "如果 <@Blue>PSCompletions<@Cyan> 对你有所帮助, 请给这个项目一个 <@Yellow>Star<@>\n"
     ],
     "description": [
       "<@Blue>PSCompletions(<@Magenta>psc<@Cyan>) --- PowerShell 补全管理模块\n",
