--- a/completions/git/language/zh-CN.json
+++ b/completions/git/language/zh-CN.json
@@ -1150,6 +1150,14 @@
           "next": 0
         },
         {
+          "name": "-n",
+          "tip": [
+            "U: -n[num]\n",
+            "[num] specifies how many lines from the annotation, if any, are printed when using -l. Implies --list.\n",
+            "The default is not to print any annotation lines. If no number is given to -n, only the first line is printed. If the tag is not annotated, the commit message is displayed instead."
+          ]
+        },
+        {
           "name": "-a",
           "alias": [
             "--annotate"
